# pag-parser

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/tests/: tests.rs
src/: lib.rs
src/format/: attrs.rs  base.rs  block.rs  file.rs  image.rs  layer.rs  mod.rs  primitive.rs  shape.rs  tag.rs  text.rs  video.rs
src/parse/: attr.rs  bits.rs  context.rs  error.rs  mod.rs  parsable.rs  parser.rs  types.rs
src/parser/: mod.rs
src/visit/: mod.rs
tests/: 12767246.pag  12767270.pag
