[package]
name = "pag-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
nom = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
concat-idents = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
macros = { path = "crates/macros" }
tokio = { version = "*", features = ["full"] }
nom = "*"
num_enum = "*"
thiserror = "*"
log = "*"
env_logger = "*"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
concat-idents = "1"
