[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
num_enum = { workspace = true }
pag-parser = { path = "../.." }
